--- a/CommunityKitchen/Views/Cause/CreateCause.cshtml
+++ b/CommunityKitchen/Views/Cause/CreateCause.cshtml
@@ -10,14 +10,14 @@
 
     <div class="default-form-area" style="display: flex; justify-content: center">
         <div id="contact-form" class="default-form">
-            <h1 style="margin-left:45px">Creating Cause</h1>
+            <h1 style="margin-left:20px">Creating Cause</h1>
             <div class="row clearfix" style="justify-content: center">
                 <div class="col-md-12 col-sm-12 col-xs-6">
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
                     <div class="form-group">
-                        @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", placeholder = "Cause's Title" } })
+                        @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", placeholder = "Causes Title" } })
                         @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
                     </div>
 
